--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
     <link rel="stylesheet" href="style.css">
     <title>Responsive Boxes Practice</title>
 </head>
-<body>
 
+<!--Practice commit-->
+
+<body>
+    <main>
     <div class="div1">DIV 1</div>
     <div class="div2">DIV 2</div>
     <div class="div3">DIV 3</div>
-    
+    </main>
 </body>
 </html>
