final inclass resp-box - code same screen image is different from Mr. H.

--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <title>Responsive Boxes Practice</title>
 </head>
 
-<!--Practice commit-->
-
 <body>
     <main>
-    <div class="div1">DIV 1</div>
+    <div class="div1">DIV 1
+        <div><h5>Responsive Boxes</h5></div>
+        <div>Child-Div2/Div1</div>
+    </div>
     <div class="div2">DIV 2</div>
     <div class="div3">DIV 3</div>
     </main>
